style.css
/* --------------- General styling -------------------- */

:root {
  --quizapp-yellow1: #FFAB00;
  --quizapp-yellow2: #FFC400;
  --quizapp-rusty-orange: #E65100;
}

body {
  width: 100%;
  height: 100vh;
  font-family: Roboto, sans-serif;
  font-size: 100%;
}

main {
  min-height: 100vh;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

h2 {
  margin-top: 10%;
  padding-top: 1rem;
}

.hidden {
  display: none;
}

.mdc-top-app-bar {
  background-color: var(--quizapp-yellow1);
  color: black;
}

/* --------------- Index page -------------------- */

#start-button {
  color: var(--quizapp-rusty-orange);
}

/* --------------- Quiz page -------------------- */

form {
  width: 100%;
}

.question-header {
  background-color: var(--quizapp-yellow2);
}

.mdc-radio .mdc-radio__native-control:enabled:checked+.mdc-radio__background .mdc-radio__outer-circle {
  border-color: var(--quizapp-yellow1);
}

.mdc-radio .mdc-radio__native-control:enabled+.mdc-radio__background .mdc-radio__inner-circle {
  border-color: var(--quizapp-yellow1);
}

.mdc-form-field>label {
  color: black;
  padding: 0 4px;
  cursor: pointer;
}

.correct {
  color: green;
  background-color: lightgreen;
  font-weight: bold;
}

#submit-button {
  margin-top: 1rem;
  margin-bottom: 1rem;
  background-color: var(--quizapp-rusty-orange);
}

#submit-button:disabled {
  background-color: lightgray;
}

#result-message__container {
  background-color: var(--quizapp-yellow2);
  border: 1px solid black;
  border-radius: 5px;
  padding: 0.5rem;
  font-weight: bold;
  overflow: hidden; /* This is to avoid that the floated buttons are overflowing */
}

#result-message__container button {
  float: right;
  background-color: var(--quizapp-rusty-orange);
  margin: 0.1rem;
}

